rollout-canary/a-and-b-rollout.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-a-b-service
spec:
  selector:
    app: rollout-a-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
